--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "mustache": "^4.0.1",
+    "redis": "^3.0.2",
     "socket.io": "^2.3.0",
     "validator": "^13.0.0"
   }
